# stations

./: .augmentignore  .gitignore  CLAUDE.md  HANDOFF.md  HANDOFF_vps.md  README.md
assets/: CLAUDE.md  README.md  deploy.sh  generate.py  site-content.css  site-header.html
audiobook/: .gitignore  CLAUDE.md  README.md  audiobook.service  deploy.sh  pyproject.toml
cc-options/: .gitignore  DOMAIN.md  HANDOFF.md  MIGRATE-PLAN.md  README.md  daily_update.sh  dashboard.py  deploy.sh  lib_greeks.py  log_trade.py  margin_compare.py  overview.py  phase2_equity_curve.py  preview_pnl.py  rb_snapshot.py  st_activities.py  st_register.py  st_snapshot.py  sync-data.sh
cclog/: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
cclog/src/cclog/: __init__.py  __main__.py  cli.py  config.py  digest.py  indexer.py  knowledge.py  mcp_server.py  models.py  parser.py  scanner.py  server.py  site.py  summarizer.py
cclog/src/cclog/templates/: summarize_prompt.txt
cmds/: CLAUDE.md  README.md  deploy.sh  generate.py  site-header.html  site-navbar.html
dockit/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  pyproject.toml
dockit/app/: app.py
dockit/app/pages/: 10_🔄_Markdown_转_Word.py  11_🔍_格式检查.py  12_✏️_修订标记.py  13_🖼️_图片题注.py  1_📝_Word_格式修复.py  2_📊_格式转换.py  3_🎨_PPT_标准化.py  4_🔗_表格合并.py  5_📄_Word_文本提取.py  6_🧹_Word_样式清理.py  7_📑_PPT_转_Markdown.py  8_📋_表格标准化.py  9_📊_图表生成.py
dockit/src/dockit/: __init__.py  __main__.py  chart.py  cli.py  csv.py  docx.py  md.py  pptx.py  text.py  xlsx.py
dockit/tests/: test_docx.py  test_text.py
docs/: .gitignore  CLAUDE.md  README.md  index.md  update-index.sh
logs/: CLAUDE.md  README.md  deploy.sh  generate.py  site-content.css  site-footer.html  site-header.html
oauth-proxy/: .gitignore  CLAUDE.md  README.md  deploy.sh  export_tokens.py
ops-console/: .gitignore  CLAUDE.md  README.md  deploy.sh  next.config.mjs  package.json  pnpm-lock.yaml  postcss.config.mjs  site-header.html  tailwind.config.ts
playbooks/: .gitignore  CLAUDE.md  README.md  deploy.sh  mkdocs.yml
stack/: CLAUDE.md  README.md  deploy.sh  generate.py  projects.yaml  site-header.html
web-stack/: .gitignore  CLAUDE.md  HANDOFF.md  README.md  package.json  pnpm-lock.yaml  turbo.json
website/: .gitignore  (+11 more)
(+1096 files in other folders)
